# django-app

./: pyproject.toml  requirements.txt
mysite/blogapp/: models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_pub_date.py
mysite/blogapp/templates/blogapp/: article_list.html  base.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myauth/: forms.py  models.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  base.html  login.html  register.html  user-details.html  user-update.html  users-list.html
mysite/mysite/: settings.py  urls.py
mysite/shopapp/: admin.py  forms.py  middlewares.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: order-fixture.json  products-fixture.json  shopapp-fixture.json  user-fixture.json
mysite/shopapp/management/commands/: create_orders.py  create_products.py
mysite/shopapp/migrations/: 0001_initial.py  0002_order.py  0003_order_user.py  0004_order_products.py  0005_product_created_by.py  0006_alter_order_options_alter_product_options.py
mysite/shopapp/templates/admin/: csv_form.html
mysite/shopapp/templates/shopapp/: base.html  file-upload.html  order-details.html  order-update.html  order_confirm_delete.html  orders-list.html  orders_changelist.html  product-details.html  product-update.html  product_confirm_delete.html  products-list.html  shop-index.html
